util/xsl/TransformFOP: Cleanup Java9+ deprecation of newInstance.